fixed nav items alignment according to home page

--- a/rules.css
+++ b/rules.css
@@ -12,7 +12,7 @@ body {
 }
 .navbar li a{
     color: white !important;
-    transition: all ease-in-out 0.6s;
+     margin-right: 10px;
 }
 .navbar li a:hover{
     color: rgb(228, 218, 218) !important;
